2003-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gal has been branched.

2003-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched.

2003-08-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: nautilus-cd-burner has been branched.

2003-08-11  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: GNOME Games has been branched. Reflect that.

2003-08-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Totem is not in the desktop any
	longer, at least for 2.4.

2003-08-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gnomemeeting branch.

2003-08-03  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix gimp-gap and gnome-spell pot name.

2003-07-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed monkey-media, maintainer says
	it's moved into rhythmbox now.

2003-07-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed gnopernicus pot file name.

2003-07-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added quick-lounge-applet to extras.

2003-07-24  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Revert gimp-tips pot name to old one.

2003-07-23  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix gimp-* pot name.

2003-07-17  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fixed epiphany pot name.

2003-07-15  Carlos Perelló Marín <carlos@pemas.net>

	* Removed obsoleted GNOME 1.4 modules.

2003-07-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: totem is now included in the desktop.

2003-07-06  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: mlview HEAD is gtk2 based now.

2003-07-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-rc.

2003-06-30  Abel Cheung  <maddog@linux.org.hk>
