@@ -256,7 +256,7 @@
     <version release="gnome-2.4">
       <component name="drgeo" dir="drgeo" group="extras">
 	<podir dir="po"/>
-	<potname name="drgenius.pot"/>
+	<potname name="drgeo.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
@@ -382,7 +382,7 @@
     <version release="gnome-2.4">
       <component name="gal" dir="gal" group="extras">
 	<podir dir="po"/>
-	<potname name="gal-AC_PACKAGE_VERSION.pot"/>
+	<potname name="gal-1.99.9.99.pot"/>
 	<branch name="evolution-1-4-branch"/>
 	<regenerate/>
 	<download/>
@@ -1336,7 +1336,7 @@
     <version release="gnome-2.4">
       <component name="gtkhtml" dir="gtkhtml" group="extras">
         <podir dir="po"/>
-        <potname name="gtkhtml-3.0.pot"/>
+        <potname name="gtkhtml-3.1.pot"/>
         <branch name="evolution-1-4-branch"/>
         <regenerate/>
         <download/>
