@@ -1,3 +1,7 @@
+2003-08-17  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Fix gal,gtkhtml,drgeo pot file name.
+
 2003-08-13  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gal has been branched.
